# BAIC

./: .env.local.example  .gitignore  AGENTS.md  BAIC.instructions  CHANGELOG.md  README.md  VERSION  pyproject.toml  requirements.txt  run_baic.py  test_baic.py
BAIC docs/: COMPLETION_REPORT.md  CONCEPTS_GUIDE.md  INDEX.md  MERIT.instructions  TECHNICAL_HLD_LLD.md  baic_design.md  baic_usage.md
bridge/: README.md  __init__.py  base.py  common.py  factory.py  llm_api.py
cfg/: config.json  merit_par_pins.json  meritutils_consumer.json  model_capability_matrix.json  model_capability_matrix.json.example  provider_registry.example.json  provider_registry.json  secrets.example.json  spoke_console_layout.json
core/: __init__.py  admin_console.py  arbitrage.py  bridge_secrets.py  capability_service.py  config_loader.py  config_scaffold.py  error_codes.py  hub_service.py  merit_env.py  path_resolver.py  provenance.py  provider_loader.py  spoke_builder.py  xray_service.py
db/: __init__.py  models.py  ports.py  repository.py  seed.py  sqlite_backend.py
docs/: BAIC_theme.md  BOOTSTRAPPING.md
scripts/: apply_merit_hyperlinks.py  certify_merit.py  create_baseline_repo.ps1  mXin.ps1  mXout.ps1  merit.ps1  merit_bootstrap.ps1  merit_git_common.ps1  merit_mxin_mxout.ps1  merit_xin_xout.ps1  publish-portal.ps1  repo_hygiene_check.py  validate_merit_hyperlinks.py
tests/: conftest.py  test_api_integration.py  test_arbitrage.py  test_bridge.py  test_capability_matrix.py  test_config_loader.py  test_config_scaffold.py  test_db.py  test_path_resolver.py  test_stub_mode.py  (+1 more)
(+45 files in other folders)
