[project]
name = "baic"
version = "0.1.0"
description = "TokenMaxxing2Zero Control Plane"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["core", "bridge", "db", "tests", "run_baic.py", "test_baic.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["B008", "E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"run_baic.py" = ["E402"]
"test_baic.py" = ["E402"]
"db/seed.py" = ["E501"]
